JS: fix tooltip z-index issues

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -60,8 +60,8 @@
       oklch(91% 0.25 100deg / 0%));
 }
 
-.tooltip-lower div {
-  z-index: 13;
+div[data-popper-placement] {
+  z-index: 8;
 }
 
 button,
